--- a/PSS/PSS/wwwroot/css/Memories.css
+++ b/PSS/PSS/wwwroot/css/Memories.css
@@ -87,6 +87,10 @@ h1 {
     position: relative; /* https://stackoverflow.com/a/12365963 */
 }
 
+#mainDiv > div > .thumbnail:hover {
+    cursor: pointer;
+}
+
 #mainDiv > div > .thumbnail > img {
     height: 200px;
     margin-left: 3px;
