--- a/PSS/PSS/wwwroot/css/Memories.css
+++ b/PSS/PSS/wwwroot/css/Memories.css
@@ -30,6 +30,10 @@ header > select, header > input[type="number"] {
     border: none;
 }
 
+header > #randomBtn {
+    margin-left: 5px;
+}
+
 input[type='number'] {
     width: 40px;
 }
