--- a/PSS/PSS/wwwroot/css/components/ViewItem.css
+++ b/PSS/PSS/wwwroot/css/components/ViewItem.css
@@ -213,21 +213,22 @@
 #viewDiv > #leftBtn {left: 10px;}
 #viewDiv > #rightBtn {right: 10px;}
 
+/*https://stackoverflow.com/questions/18490334/responsive-image-full-screen-and-centered-maintain-aspect-ratio-not-exceed-wi/18490463*/
+/*https://stackoverflow.com/a/58114205*/
 #itemDiv {
-    height: 98%;
     display: flex;
-    align-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
     align-items: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    outline: none; /* Remove focus outline */
 }
 
-/*https://stackoverflow.com/questions/18490334/responsive-image-full-screen-and-centered-maintain-aspect-ratio-not-exceed-wi/18490463*/
-#itemDiv > img, video {
-    height: 100%;
-    overflow: auto;
-    object-fit: cover;
+#itemDiv > img, #itemDiv > video {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
