Fix issue where clicking a thumbnail's video icon wouldn't make the item fullscreen

--- a/PSS/PSS/wwwroot/css/Memories.css
+++ b/PSS/PSS/wwwroot/css/Memories.css
@@ -78,6 +78,7 @@ h1 {
     position: absolute;
     right: 8px;
     top: 10px;
+    pointer-events: none;
 }
 
 #mainDiv > div > .thumbnail > img {
