--- a/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
+++ b/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
@@ -45,6 +45,7 @@ h1 {
     position: absolute;
     right: 8px;
     top: 10px;
+    pointer-events: none;
 }
 
 #libContentViewer > .spanAndRow > .row > .thumbnail > .checkbox {
