--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -23,7 +23,7 @@
         </div>
         
         <div id="collectionsSearch">
-            <input type="text" @bind="@searchText" @onkeydown="@(e => { if (e.Code is "Enter" or "NumpadEnter") SearchCollections(); })" @onfocusout="@SearchCollections" placeholder="Search Collections"/>
+            <input type="text" @bind="@searchText" @bind:event="oninput" placeholder="Search Collections"/>
             <button class="iconBtn" @onclick="@(() => searchText = "")"><span class="material-icons-outlined">clear</span></button>
         </div>
         
@@ -32,6 +32,8 @@
             <div class="collectionsList">
                 @for (int i = 0; i < albums.Count; i++)
                 {
+                    if (!String.IsNullOrWhiteSpace(searchText) && !albums[i].name.Contains(searchText)) continue;
+                    
                     int ii = i;
                     <div class="collection" @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })">
                         <div class="coverDiv">
@@ -47,6 +49,8 @@
             <div class="collectionsList">
                 @for (int i = 0; i < folders.Count; i++)
                 {
+                    if (!String.IsNullOrWhiteSpace(searchText) && !folders[i].name.Contains(searchText)) continue;
+
                     int ii = i;
                     <div class="collection" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
                         <div class="coverDiv">
@@ -282,10 +286,5 @@
             
             return -1;
         }
-    }
-
-    private void SearchCollections()
-    {
-        
     }
 }
