Slight reformat of logic for finding the newest collection

--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -125,13 +125,14 @@
         await InvokeAsync(StateHasChanged); //https://stackoverflow.com/questions/56477829/how-to-fix-the-current-thread-is-not-associated-with-the-renderers-synchroniza
 
         int newestAlbumIndex = albums.FindIndex(a => a.name == CollectionCreator.NewCollectionName);
-        int newestFolderIndex = folders.FindIndex(f => f.name == CollectionCreator.NewCollectionName);
         if (newestAlbumIndex != -1)
         {
             checkedAlbums[newestAlbumIndex] = true;
         }
-        else if (newestFolderIndex != -1)
+        else
         {
+            int newestFolderIndex = folders.FindIndex(f => f.name == CollectionCreator.NewCollectionName);
+            if (newestFolderIndex == -1) return;
             checkedFolderIndex = newestFolderIndex;
             checkedFolders[newestFolderIndex] = true;
         }
