--- a/PSS/PSS/Pages/CollectionView.razor
+++ b/PSS/PSS/Pages/CollectionView.razor
@@ -29,7 +29,12 @@
             <button class="iconBtn" style="visibility: @headerVis"><span class="material-icons-outlined" @onclick="@libContentViewer.DownloadSelected">file_download</span></button>
             <button class="iconBtn" style="visibility: @headerVis" @onclick="@(() => collectionsVis = "visible")" title="Add Selected to Collection"><span class="material-icons-outlined">library_add</span></button>
             <button class="iconBtn" style="visibility: @headerVis" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref libContentViewer.starPromptVis))"><span class="material-icons-outlined">star_outline</span></button>
-            <button class="iconBtn" style="visibility: @headerVis" @onclick="@RemoveBtnClick" title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
+            
+            @if (!collection.readOnly)
+            {
+                <button class="iconBtn" style="visibility: @headerVis" @onclick="@RemoveBtnClick" title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
+            }
+    
             <button class="iconBtn" style="visibility: @headerVis" @onclick="@libContentViewer.DeleteBtnClick" title="Delete Selected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             <button class="iconBtn" @onclick="@(() => F.VisToggle(ref sortDivVis))" title="More Options"><span class="material-icons-outlined">more_vert</span></button>
         </div>
