Add bool param to C.GetCollectionsTable to control if readonly items should be selected

--- a/PSS/PSS/Pages/CollectionsMain.razor
+++ b/PSS/PSS/Pages/CollectionsMain.razor
@@ -72,7 +72,7 @@
         sortDivVis = "hidden";
     }
 
-    private static void GetCollectionsTable() => collections = C.GetCollectionsTable(showAlbums, showFolders, mode);
+    private static void GetCollectionsTable() => collections = C.GetCollectionsTable(showAlbums, showFolders, true, mode);
 
     private static void SetSortBtnText()
     {
