Collection name input in CV.razor now is disabled if the collection is readonly

--- a/PSS/PSS/Pages/CollectionView.razor
+++ b/PSS/PSS/Pages/CollectionView.razor
@@ -12,14 +12,21 @@
         <span style="visibility: @headerVis" id="selectedAmtText">@selectedItemsCount&nbsp;&nbsp;Selected</span>
 
         <div id="collectionRenameDiv">
-            <input type="text" placeholder="Enter new collection name" @bind="@NewCollectionName" @bind:event="oninput" autocomplete="off">
-            
+            @if (collection.readOnly)
+            {
+                <input disabled type="text" placeholder="Enter new collection name" @bind="@NewCollectionName" @bind:event="oninput" autocomplete="off"/>
+            }
+            else
+            {
+                <input type="text" placeholder="Enter new collection name" @bind="@NewCollectionName" @bind:event="oninput" autocomplete="off"/>
+            }
+
             <span title="@(collection.readOnly ? "Readonly" : "")" class="material-icons-outlined">@(collection.readOnly ? "lock" : "")</span>
-            
+
             <button class="iconBtn" @onclick="@CancelBtnClick" style="visibility: @buttonsVis">
                 <span class="material-icons-outlined">close</span>
             </button>
-    
+
             <button class="iconBtn" @onclick="@ConfirmBtnClick" style="visibility: @buttonsVis">
                 <span class="material-icons-outlined">check</span>
             </button>
