--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -52,6 +52,19 @@
 		</div>
 		
 		<div id="buttons" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">
+			<select @bind="@newDTSource" @bind:after="@(() => Console.WriteLine(newDTSource))">
+				@{
+					bool canDisplayMetadata = importFiles.All(file => !selectedItems.Contains(file.uuid) || file.metadataDateTaken != null);
+					if (canDisplayMetadata) { <option>Metadata</option> }
+
+					bool canDisplayFilename = importFiles.All(file => !selectedItems.Contains(file.uuid) || file.filenameDateTaken != null);
+					if (canDisplayFilename) { <option>Filename</option> }
+
+					<option>None</option>
+					<option>Custom</option>
+				}
+			</select>
+			
 			<button class="iconBtn" @onclick="@ToggleStars"><span class="material-icons-outlined">star</span></button>
 			<button class="iconBtn" @onclick="@DeleteSelected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
 		</div>
@@ -177,6 +190,8 @@
 	private static int errorAmount;
 
 	private static string searchText, statusMessage;
+
+	private DateTakenSource newDTSource = DateTakenSource.None;
 
 	protected override void OnInitialized()
 	{
